--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt": "latest",
     "grunt-autoprefixer": "latest",
     "grunt-concurrent": "latest",
+    "grunt-contrib-copy": "latest",
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-devcode": "latest",
